# dotfiles

./: -a  .dotter-exclude.md  .gitignore  .stignore  API-KEYS-SETUP.md  AUTO-COMMIT-TEST.md  BIDIRECTIONAL-SYNC-TEST.md  BIDIRECTIONAL-TEST.md  CLAUDE-ARCHIVE.md  CLAUDE.md  COMPREHENSIVE-DOTTER-SOLUTION.md  DOCUMENTATION-CLEANUP-COMPLETE.md  DOTTER-CONFIG-DRIFT-DISASTER.md  ENHANCED-RELIABILITY-ACHIEVED.md  ENHANCED-RELIABILITY-TEST.md  LINUX-MIGRATION-CRITICAL-FIX.md  LINUX-MIGRATION.md  LINUX-PATH-FIX-COMMANDS.md  LINUX-TO-MACOS-FINAL-TEST.md  PATH-FIX-SUCCESS.md  README.md  SCRIPT-CLEANUP-REPORT.md  SYNC-TEST.md  SYSTEM-DNA.md  arch-packages-aur.txt  arch-packages.txt  brew-casks.txt  brew-formulae.txt  cargo-crates.txt  install-nimbini.sh  launchagents.txt  npm-globals-nimbini.txt  npm-globals.txt  reliability-test-20250924-153752.md  starship.toml  system-services-enabled.txt  system-timers-enabled.txt  user-groups-macos.txt  user-groups.txt  user-units-enabled.txt
rust-projects/anki-cards/: Cargo.toml
rust-projects/anki-cards/src/: anki.rs  extract.rs  main.rs  preview.rs
rust-projects/bequest/: Cargo.toml
rust-projects/bequest/src/: config.rs  disclose.rs  enrol.rs  gf256.rs  heartbeat.rs  lib.rs  main.rs  page.rs  send.rs  shamir.rs  vault.rs
rust-projects/clinic-attendance-report/: Cargo.toml
rust-projects/clinic-attendance-report/src/: main.rs
rust-projects/clinical/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
rust-projects/clinical-dashboard-dioxus/: Cargo.toml
rust-projects/clinical-dashboard-dioxus/src/: main.rs
rust-projects/clinical-dashboard-iced/: Cargo.toml
rust-projects/clinical-dashboard-iced/src/: main.rs
rust-projects/clinical-product/: Cargo.toml
rust-projects/clinical-product/src/: config.rs  dashboard.rs  email.rs  inference.rs  main.rs  onboard.rs  referral.rs  runpod.rs  sync.rs  tm3_clients.rs  voice_pod.rs
rust-projects/clinical-product/src/admin_dashboard/: handlers.rs  tests.rs
rust-projects/clinical-product/src/billing/: config.rs  invoice.rs
rust-projects/clinical-product/src/dashboard_assets/: app.js  index.html  style.css
rust-projects/clinical-product/src/registry/: client.rs  config.rs  (+4 more)
rust-projects/clinical/src/: auth.rs  client.rs  deidentify.rs  identity.rs  letter.rs  lib.rs  main.rs  markdown.rs  note.rs  populate.rs  reidentify.rs  scaffold.rs  session.rs
rust-projects/clinical/tests/: faithfulness-eval.sh
rust-projects/concert-capture/: Cargo.toml  README.md
rust-projects/concert-capture/src/: api.rs  archive.rs  daypage.rs  html.rs  main.rs  notation.rs
rust-projects/continuum-activity/: Cargo.toml
rust-projects/continuum-activity/src/: backfill.rs  cc_logs.rs  clean.rs  continuum.rs  dump.rs  load.rs  main.rs  output.rs  types.rs
rust-projects/continuum-dream/: Cargo.toml
rust-projects/continuum-dream/src/: apply.rs  consolidate.rs  diff.rs  gates.rs  gather.rs  main.rs  orient.rs  prune.rs  state.rs  types.rs
rust-projects/cross-machine-sync-check/: Cargo.toml
rust-projects/cross-machine-sync-check/src/: checks.rs  main.rs
rust-projects/dev-catchup/: Cargo.toml
rust-projects/dev-catchup/src/: activity.rs  daypage.rs  devlog.rs  drafting.rs  git.rs  main.rs  matching.rs  output.rs  project.rs  types.rs
rust-projects/email-extract/: Cargo.toml  README.md
rust-projects/email-extract/src/: extract.rs  main.rs  output.rs
rust-projects/excalidraw-assistant/: Cargo.toml
rust-projects/excalidraw-assistant/src/: builder.rs  convert.rs  elements.rs  export.rs  layout.rs  lint.rs  main.rs  mindmap.rs  scene.rs  style.rs  viewer.rs
rust-projects/fd-budget/: Cargo.toml  FABLE-REVIEW-2026-07-12.md  README.md
rust-projects/fd-budget/src/: dedup.rs  lib.rs  main.rs
rust-projects/fd-budget/tests/: paypal_e2e.rs
rust-projects/forum/: Cargo.toml  README.md
rust-projects/forum/src/: main.rs
rust-projects/gmpull/: Cargo.toml
rust-projects/gmpull/src/: api.rs  auth.rs  labels.rs  maildir.rs  main.rs  state.rs
rust-projects/graph-send/: Cargo.toml
rust-projects/graph-send/src/: main.rs
rust-projects/grok-to-continuum/: Cargo.toml  README.md
rust-projects/grok-to-continuum/src/: main.rs
rust-projects/mailcurator/: Cargo.toml  SUBSCRIPTIONS.md  example-policies.toml
rust-projects/mailcurator/src/: bills_cli.rs  bookings_cli.rs  config.rs  coverage.rs  eval.rs  extract.rs  journeys_cli.rs  leader.rs  llm.rs  llm_cache.rs  main.rs  notmuch.rs  orders_cli.rs  policy.rs  proposer.rs  store.rs  subscriptions.rs  tesla_cli.rs
rust-projects/mailforge/: Cargo.toml
rust-projects/mailforge/docs/: design-tokens.md  keybindings.md
rust-projects/mailforge/src/: activity.rs  daemon.rs  main.rs  manifest.rs  pipe.rs
rust-projects/meliview/: Cargo.toml
rust-projects/meliview/src/: daemon.rs  main.rs  manifest.rs  pipe.rs
rust-projects/module/: Cargo.toml  README.md
rust-projects/module/src/: changelog.rs  export.rs  import.rs  main.rs  scrolls.rs
rust-projects/pageprobe/: Cargo.toml
rust-projects/pageprobe/src/: cdp.rs  chrome.rs  main.rs  state.rs
rust-projects/practiceforge/: Cargo.toml
rust-projects/practiceforge/src/: config.rs  dashboard.rs  dephi.rs  dictation.rs  email.rs  inference.rs  keystore.rs  llm.rs  main.rs  onboard.rs  outcomes.rs  portal.rs  prompt_presets.rs  referral.rs  runpod.rs  session_cookies.rs  sync.rs  sync_docs.rs  tm3_clients.rs  tm3_diary.rs
rust-projects/readwise-sync/: Cargo.toml  README.md
rust-projects/readwise-sync/src/: main.rs
rust-projects/scroll-server/: Cargo.toml
rust-projects/scroll-server/src/: audit.rs  config.rs  day_word.rs  handler.rs  lib.rs  main.rs  ratelimit.rs
rust-projects/scroll-server/tests/: integration.rs
rust-projects/skill-eval/: Cargo.toml
rust-projects/skill-eval/src/: config.rs  evaluate.rs  invoke.rs  log_parser.rs  main.rs  propose.rs  report.rs
rust-projects/sr/: Cargo.toml
rust-projects/sr/src/: card.rs  config.rs  main.rs  scheduler.rs
rust-projects/state-capture/: Cargo.toml  README.md
rust-projects/state-capture/src/: capture.rs  check.rs  config.rs  main.rs  preset.rs
(+899 files in other folders)
