[package]
name = "anki-cards"
version = "0.1.0"
edition = "2021"
description = "Extract flashcards from text via LLM, push to Anki"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
