[package]
name = "bequest"
version = "0.1.0"
edition = "2021"
description = "Digital estate orchestrator — Shamir secret sharing and vault management"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
base64 = "0.22"
dirs = "6"
humantime = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# lettre provides RFC 5322 MIME construction (builder + attachments).
# No SMTP transport features — bequest pipes the built MIME to msmtp as a
# subprocess, which handles the network + pizauth XOAUTH2 auth.
lettre = { version = "0.11", default-features = false, features = ["builder"] }

[dev-dependencies]
tempfile = "3"
