[package]
name = "clinic-attendance-report"
version = "0.2.0"
edition = "2021"
description = "Generate attendance report from PracticeForge session data"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
