[package]
name = "clinical-product"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0.102"
headless_chrome = "1.0"
toml = "0.8"
dirs = "6"
chrono = "0.4"
totp-rs = { version = "5", features = ["gen_secret"] }

# Email sending (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Billing module (identity.yaml parsing)
serde_yaml = "0.9"

# Referral intake (IMAP)
imap = "3.0.0-alpha.15"
mail-parser = "0.9"
regex = "1"

# Dashboard (local web UI)
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
async-stream = "0.3"

# Scheduling (PracticeForge)
rrule = "0.14"
icalendar = { version = "0.16", features = ["parser"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
