[package]
name = "clinical"
version = "0.1.0"
edition = "2021"
description = "Cross-platform clinical notes toolchain"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
