[package]
name = "continuum-dream"
version = "0.1.0"
edition = "2021"
description = "Automated memory consolidation across AI assistant conversation logs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
similar = "2"
regex = "1"

[profile.release]
strip = true
lto = true
