[package]
name = "cross-machine-sync-check"
version = "0.1.0"
edition = "2021"
description = "Cross-machine code propagation drift detection"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
