[package]
name = "email-extract"
version = "0.1.0"
edition = "2021"
description = "Extract and convert MIME email files (Maildir) to plain text, markdown, or JSON"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
mailparse = "0.15"
regex = "1"
