[package]
name = "easel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ea"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tiny_http = "0.12"
