[package]
name = "fd-budget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
rust_decimal = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
thiserror = "2"
anyhow = "1"
hex = "0.4"
dirs = "5"
serde_json = "1"
