[package]
name = "gmpull"
version = "0.1.0"
edition = "2024"
description = "Pull Gmail messages via REST API into a maildir, replacement for lieer."

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-util = "0.7"
dirs = "6"
urlencoding = "2"
filetime = "0.2"
governor = "0.10"

[profile.release]
lto = true
codegen-units = 1
