[package]
name = "graph-send"
version = "0.1.0"
edition = "2021"
description = "Stdin-MIME mail sender via Microsoft Graph /me/sendMail (XOAUTH2-blocked tenants)"

[dependencies]
anyhow = "1.0.102"
data-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[profile.release]
strip = true
lto = "thin"
