[package]
name = "mailcurator"
version = "0.1.0"
edition = "2024"
description = "Per-sender email lifecycle policies and structured extraction, driven by notmuch"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "6"
rand = "0.8"

[profile.release]
lto = true
