[package]
name = "mailforge"
version = "0.1.0"
edition = "2021"
description = "Browser-handoff viewer for HTML and PDF mail parts. Pairs with meli (or any MUA via mailcap)."
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
mail-parser = "0.11"
mime_guess = "2"
open = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs"] }
tower-http = { version = "0.5", features = ["fs", "set-header"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

# === mailforge (browser-native MUA layer) deps ===
#
# notmuch: not a Rust crate. We shell out to the `notmuch` CLI per the
# mailcurator/src/notmuch.rs pattern — no libnotmuch headers needed at build
# time, CLI is stable across the 0.39+ versions that ship in homebrew/apt,
# and the call pattern (search → render page → done) makes subprocess
# overhead negligible. See src/mail/notmuch_db.rs.
#
# lettre: MIME construction only (NOT the SMTP transport). Bequest already
# uses this pattern (src/send.rs): lettre builds the RFC5322 message bytes,
# msmtp / graph-send do the wire transport. Pizauth handles OAuth tokens.
#
# maud: compile-time HTML templates with inline Rust. Chosen over askama
# because we have no separate designer, the templates ship with the binary,
# and call-site type-checking beats external-template ergonomics for our
# scope. See mail/templates.rs.
lettre = { version = "0.11", default-features = false, features = ["builder"] }
maud = "0.26"

# reqwest: server-side HTTP client for RFC 8058 one-click List-Unsubscribe POST.
# rustls-tls keeps the binary OpenSSL-free (mirrors what bequest/pizauth use);
# `default-features = false` strips the cookie store and chunked-streaming we
# don't need. We disable redirect-following intentionally — see
# `mail::unsubscribe::execute` for why (cookie-bound redirect targets must
# fall through to the user's browser).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
strip = true
lto = "thin"
