[package]
name = "module"
version = "0.1.0"
edition = "2021"
description = "Cross-platform module/scroll management for AI advisor sessions"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
dirs = "5"
regex = "1"
