[package]
name = "pageprobe"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for inspecting Chrome via the DevTools Protocol"

[[bin]]
name = "pageprobe"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal", "process"] }
futures = "0.3"
chromiumoxide = "0.9"
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
