[package]
name = "practiceforge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
sha2 = "0.10"
data-encoding = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0.102"
headless_chrome = "1.0"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
totp-rs = { version = "5", features = ["gen_secret"] }
urlencoding = "2"
base64 = "0.22"

# Email sending (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }

# Billing module (identity.yaml parsing)
serde_yaml = "0.9"

# Referral intake (IMAP)
imap = "3.0.0-alpha.15"
mail-parser = "0.9"
regex = "1"

# Dashboard (local web UI)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
async-stream = "0.3"

# On-device voice dictation (whisper.cpp via Rust bindings).
# Platform-gated: `metal` is Apple-only; Linux builds CPU-only (whisper.cpp
# compiles fine without accelerators and still runs — just slower).
# Platform-specific entries for the same crate are further down the file
# (see [target.'cfg(target_os = "macos")'.dependencies] etc.).

# Scheduling (PracticeForge)
rrule = "0.14"
icalendar = { version = "0.16", features = ["parser"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
shellexpand = "3"
lazy_static = "1"

# Search (PracticeForge)
tantivy = "0.22"

# Cross-platform secret storage (keystore module)
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "5", features = ["rt-tokio-crypto-rust"] }

# Whisper (voice dictation) — platform-gated feature set.
# macOS: Metal GPU acceleration via the `metal` feature.
# Linux/Windows: CPU-only build (whisper.cpp compiles cleanly without Metal).
[target.'cfg(target_os = "macos")'.dependencies.whisper-rs]
version = "0.16"
features = ["metal"]

[target.'cfg(not(target_os = "macos"))'.dependencies.whisper-rs]
version = "0.16"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
