[package]
name = "readwise-sync"
version = "0.1.0"
edition = "2021"
description = "Sync Readwise highlights and Reader articles to local markdown"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
slug = "0.1"
