[package]
name = "scroll-server"
version = "0.1.0"
edition = "2021"
description = "Private personal-context scroll server fetched by Grok via Cloudflare Tunnel"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = "0.6"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"

[profile.release]
strip = "symbols"
lto = "thin"
