[package]
name = "skill-eval"
version = "0.1.0"
edition = "2021"
description = "Vendor-neutral skill evaluation runner — binary assertions against AI conversation logs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
walkdir = "2"
