[package]
name = "sr"
version = "0.1.0"
edition = "2021"
description = "Spaced retrieval CLI — FSRS-4 scheduler with plain-text markdown cards"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
dirs = "6"

[dev-dependencies]
tempfile = "3"
