[package]
name = "state-capture"
version = "0.1.0"
edition = "2021"
description = "Config-driven system state capture and drift detection"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
